# judaemon

./: ProjectHome.md  README  configure.ac
data/: settings.conf
include/: Makefile.am
include/judaemon/: component.h  conf.h  module.h
modules/: Makefile.am
modules/power/: Makefile.am  power.c
modules/xrandr/: Makefile.am  xrandr.c
po/: Makefile.am
src/: Makefile.am  component.c  component.h  conf.c  conf.h  judaemon.c  judaemon.h  module.c  module.h
